# iDescriptor

./: CMakeLists.txt  README.md  resources.qrc
.github/workflows/: build-linux.yml  build-macos-x86_64.yml  build-macos.yml  build-windows.yml  build.yml  ci.yml
cmake/: win-deploy.cmake
resources/icons/app-icon/: icon.icns
scripts/: deploy-appimage.sh  deploy-dmg.sh
snap/: snapcraft.yaml
src/: afcexplorerwidget.cpp  afcexplorerwidget.h  airplaywindow.cpp  airplaywindow.h  appcontext.cpp  appcontext.h  appdownloadbasedialog.cpp  appdownloadbasedialog.h  appdownloaddialog.cpp  appinstalldialog.cpp  appinstalldialog.h  appswidget.cpp  appswidget.h  deviceimagewidget.cpp  deviceinfowidget.cpp  deviceinfowidget.h  devicemanagerwidget.cpp  devicemanagerwidget.h  devicependingwidget.cpp  devicependingwidget.h  diskusagewidget.cpp  diskusagewidget.h  exportmanager.cpp  fileexportdialog.cpp  fileexportdialog.h  gallerywidget.cpp  iDescriptor-ui.h  iDescriptor.h  installedappswidget.cpp  installedappswidget.h  jailbrokenwidget.cpp  main.cpp  mediastreamer.cpp  networkdeviceswidget.cpp  networkdeviceswidget.h  photoexportmanager.cpp  photoexportmanager.h  photomodel.cpp  servicemanager.cpp  servicemanager.h  (+3 more)
src/core/services/: get-device-info.cpp  get_battery_info.cpp  get_file_tree.cpp  get_mounted_image.cpp  init_device.cpp  install_ipa.cpp  mount_dev_image.cpp  set_location.cpp
src/core/services/avahi/: avahi_service.cpp
src/core/services/dnssd/: dnssd_service.cpp
